--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+@import "@blueprintjs/core/lib/css/blueprint.css";
+@import "@blueprintjs/popover2/lib/css/blueprint-popover2.css";
+
+body {
+  font-family: 'Abril Fatface', cursive;
+  font-family: 'Climate Crisis', cursive;
+}
+
 .App {
   text-align: center;
+}
+a:hover {
+  text-decoration: none;
 }
 
 .App-logo {
@@ -13,21 +24,109 @@
   }
 }
 
+
+img {
+  border-radius: 4px;
+}
+
+.bp4-navbar-divider {
+  border-left: 1px solid silver;
+}
+
+
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
   color: #61dafb;
 }
 
+.container {
+  margin-top: 10px;
+}
+
+.grid {
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.item {
+  margin: 10px;
+  max-width: 250px;
+  min-width: 250px;
+}
+
+.bp4-button:not([class*=bp4-intent-]) {
+  box-shadow: none;
+  background-color: white;
+}
+
+.bp4-button:not([class*=bp4-intent-]):hover {
+  box-shadow: none;
+  background-color: white;
+}
+
+.menu-items div, .menu-items a {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.bp4-navbar {
+  box-shadow: none;
+  border-bottom: 0.5px solid silver;
+  height: 75px;
+  padding: 10px 15px;
+}
+.onHoverPanel {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.img1 {
+  background-image: url('https://thehousecannabis.ca/static/ec2cc83b5630cab0eb8e9ca65e1f8e63/08684/hero_hd_eebbc18ed0.avif');
+}
+
+.img2 {
+  background-image: url('https://thehousecannabis.ca/static/063f1e2dd5cb8770dadfe88e5305fde6/b44c8/delivery_hd_3a79c30ade.avif');
+}
+
+.img3 {
+  background-image: url('https://thehousecannabis.ca/static/71fe545981f7ce7fa82a6a8be6b35b8d/afd04/hero_specials_1147f530bb.avif');
+}
+
+.onHoverPanel:hover {
+  box-shadow: 0 0 11px rgba(53, 52, 52, 0.2); 
+  transition: 0.3s;
+}
+
+.title {
+  font-size: 42px;
+  color: rgb(45, 43, 44);
+  margin-bottom: 25px;
+  z-index: 2;
+  width: 45%;
+  font-weight: 700;
+}
+.header {
+  font-size: 26px;
+  color: rgb(45, 43, 44);
+  margin-bottom: 15px;
+  z-index: 2;
+  width: 32.5%;
+  font-weight: 500;
+}
+
+:focus {
+  outline: none;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
