--- a/src/App.css
+++ b/src/App.css
@@ -218,9 +218,17 @@ img {
   }
 }
 
+.content-container {
+  max-height: 90%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
 
 @media only screen and (max-width: 600px) {
   .addToCart {
     margin-left: 180px;
+  }
+  .content-container {
+    max-height: 88%;
   }
 }
