--- a/src/App.css
+++ b/src/App.css
@@ -250,6 +250,8 @@ img {
     }
 }
 
+
+
 @media only screen and (max-width: 600px) {
   .addToCart {
     margin-left: 180px;
@@ -266,5 +268,11 @@ img {
   .productCard {
     margin-top: 10px;
     margin-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .content-container {
+    max-height: 80%;
   }
 }
