--- a/src/App.css
+++ b/src/App.css
@@ -194,7 +194,7 @@ img {
   position: absolute;
   bottom: 107px;
   text-align: right;
-  width: 93%;
+  width: 97%;
 }
 
 .chakra-slide .chakra-modal__body {
@@ -256,6 +256,39 @@ img {
     .productCard {
       min-height: 460px;
     }
+}
+
+.slick-slider {
+  width: 98%;
+  margin: 0 auto;
+}
+
+.chakra-input-custom {
+  width: 100%;
+  min-width: 0px;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  position: relative;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  transition-property: var(--chakra-transition-property-common);
+  transition-duration: var(--chakra-transition-duration-normal);
+  font-size: var(--chakra-fontSizes-md);
+  -webkit-padding-start: var(--chakra-space-4);
+  padding-inline-start: var(--chakra-space-4);
+  -webkit-padding-end: var(--chakra-space-4);
+  padding-inline-end: var(--chakra-space-4);
+  height: var(--chakra-sizes-10);
+  border-radius: var(--chakra-radii-md);
+  border: 1px solid;
+  border-color: inherit;
+  background: inherit;
+}
+
+.slick-prev:before, .slick-next:before {
+  color: black !important;
 }
 
 @media only screen and (max-width: 600px) {
