--- a/src/App.css
+++ b/src/App.css
@@ -310,6 +310,11 @@ img {
   background: inherit;
 }
 
+.chakra-input-custom-2 {
+  width: 50%;
+  text-align: center;
+}
+
 .slick-prev:before, .slick-next:before {
   color: black !important;
 }
@@ -329,9 +334,9 @@ img {
 }
 
 .navbar-progressbar {
-  width: 800px;
+  width: 1224px;
   margin-left: 100px;
-  height: 100%;
+  height: 20px;
   font-size: 10px;
 }
 
@@ -354,6 +359,10 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
+  .navbar-progressbar {
+    margin-left: 0px;
+    width: 350px !important;
+  }
   .addToCart {
     margin-left: 180px;
   }
