--- a/src/App.css
+++ b/src/App.css
@@ -333,8 +333,9 @@ img {
 .navbar-progressbar {
   width: 1000px;
   margin-left: 90px;
-  height: 20px;
-  font-size: 10px;
+  height: 30px;
+  font-size: 11px;
+  font-weight: bold;
 }
 
 .onIconHoverSuccess:hover {
