added some ui changes and fixed the admin order addTo function

--- a/src/App.css
+++ b/src/App.css
@@ -461,7 +461,7 @@ img {
     width: 350px !important;
   }
   .addToCart {
-    margin-left: 180px;
+    /* margin-left: 75px; */
   }
 
   .text-overlay {
