--- a/src/App.css
+++ b/src/App.css
@@ -449,9 +449,17 @@ img {
 .react-autosuggest__suggestion--highlighted {
   background-color: #ddd;
 }
-
+.backToTop button {
+  position: fixed;
+  bottom: 50px;
+  right: 35px;
+}
 
 @media only screen and (max-width: 600px) {
+  .backToTop button {
+    bottom: 30px;
+    right: 28px;
+  }
   .navbar-progressbar {
     margin-left: 0px;
     width: 350px !important;
