--- a/src/App.css
+++ b/src/App.css
@@ -258,6 +258,11 @@ img {
   border-radius: 25px;
 }
 
+.saleBorder {
+  border: 4px solid red !important;
+  border-radius: 25px;
+}
+
 /* Portrait */
 @media only screen 
   and (min-device-width: 768px) 
