--- a/src/App.css
+++ b/src/App.css
@@ -263,6 +263,11 @@ img {
   border-radius: 25px;
 }
 
+.newProduct {
+  border: 4px solid blue !important;
+  border-radius: 25px;
+}
+
 /* Portrait */
 @media only screen 
   and (min-device-width: 768px) 
@@ -493,9 +498,6 @@ img {
   .navbar-progressbar {
     margin-left: 0px;
     width: 350px !important;
-  }
-  .addToCart {
-    /* margin-left: 75px; */
   }
 
   .text-overlay {
